k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: interop
  labels:
    name: interop
    app: healthcare-interop-platform
